Added sections functionality.

--- a/views/offline.jade
+++ b/views/offline.jade
@@ -2,11 +2,12 @@
 
 | # Any updates to the schema must increment the version
 | # to trigger a cache update
-| # Version 2.0.1
+| # Version 2.2.1
 
 | CACHE:
 | /partials/index
 | /partials/error
+| /partials/settings
 | /css/angular-toggle-switch.css
 | /css/angular-toggle-switch-bootstrap.css
 | /css/bootstrap.min.css
