Fixed issues with initialization.

--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -19,10 +19,10 @@ div#header
 
 div.container
 	div.row
-		div.col-md-2
-		div.col-md-8.text-center
+		div.col-xs-2
+		div.col-xs-8.text-center
 			h2 {{title}}
-		div.col-md-2
+		div.col-xs-2
 			a.btn.btn-default.btn-md.pull-right(href='/settings', style='margin-top:20px; margin-bottom:10px;')
 				span.glyphicon.glyphicon-cog  Settings
 	hr
