--- a/views/partials/settings.jade
+++ b/views/partials/settings.jade
@@ -13,12 +13,12 @@ div#header
 
 div.container
 	div.row		
-		div.col-md-2
+		div.col-xs-2
 			a.btn.btn-default.btn-md.pull-left(href='/', style='margin-top:20px; margin-bottom:10px;')
 				span.glyphicon.glyphicon-arrow-left  Back		
-		div.col-md-8.text-center
+		div.col-xs-8.text-center
 			h2 Settings
-		div.col-md-2
+		div.col-xs-2
 			
 	hr
 	div.alert.alert-success.alert-dismissable(ng-show='successMessage != null && showSuccess') 
