Removed Settings text.

--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -24,7 +24,7 @@ div.container
 			h2 {{title}}
 		div.col-xs-2
 			a.btn.btn-default.btn-md.pull-right(href='/settings', style='margin-top:20px; margin-bottom:10px;')
-				span.glyphicon.glyphicon-cog  Settings
+				span.glyphicon.glyphicon-cog
 	hr
 	div.alert.alert-success.alert-dismissable(ng-show='successMessage != null && showSuccess') 
 		button.close(type='button', data-hide='alert', aria-hidden="true", ng-click='showSuccess = ! showSuccess')&times;
