--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -1,9 +1,15 @@
 script(src='/js/angular.min.js')
 script(src='/js/angular-route.min.js')
-script(src='/js/ui-bootstrap-tpls-0.11.0.min.js')
 script(src='/js/app.js')
-script(src='/js/services.js')
-script(src='/js/directives.js')
-script(src='/js/controllers.js')
-script(src='/js/filters.js')
-script(src='/js/angular-toggle-switch.min.js')
+
+script(src='/js/controllers/controllers.js')
+
+script(src='/js/filters/filters.js')
+
+script(src='/js/directives/directives.js')
+script(src='/js/directives/ui-bootstrap-tpls-0.11.0.min.js')
+script(src='/js/directives/angular-toggle-switch.min.js')
+script(src='/js/directives/sai-app-version.js')
+
+script(src='/js/services/services.js')
+script(src='/js/services/sai-version.js')
