--- a/public/css/site.css
+++ b/public/css/site.css
@@ -18,3 +18,7 @@
 .navbar {
 	margin-bottom: 0;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+	display: none !important;
+}
