--- a/views/offline.jade
+++ b/views/offline.jade
@@ -2,7 +2,7 @@
 
 | # Any updates to the schema must increment the version
 | # to trigger a cache update
-| # Version 2.4.5
+| # Version 2.5.0
 
 | CACHE:
 | /partials/index
@@ -16,19 +16,21 @@
 | /js/angular.min.js.map
 | /js/angular-route.min.js
 | /js/angular-route.min.js.map
-| /js/angular-toggle-switch.min.js
-| /js/ui-bootstrap-tpls-0.11.0.min.js
 | /js/app.js
-| /js/controllers.js
-| /js/directives.js
-| /js/filters.js
-| /js/services.js
-| /js/bootstrap.min.js
+| /js/controllers/controllers.js
+| /js/directives/ui-bootstrap-tpls-0.11.0.min.js
+| /js/directives/angular-toggle-switch.min.js
+| /js/directives/directives.js
+| /js/directives/sai-app-version.js
+| /js/services/services.js
+| /js/services/sai-version.js
+| /js/filters/filters.js
 | /fonts/glyphicons-halflings-regular.eot
 | /fonts/glyphicons-halflings-regular.svg
 | /fonts/glyphicons-halflings-regular.ttf
 | /fonts/glyphicons-halflings-regular.woff
 | /images/loading.gif
+| /images/large_spinner.gif
 | #{apiLink}/json/schemas.json?callback=angular.callbacks._0
 
 | NETWORK:
