Added animation effect, subsection parent title.

--- a/views/offline.jade
+++ b/views/offline.jade
@@ -2,7 +2,7 @@
 
 | # Any updates to the schema must increment the version
 | # to trigger a cache update
-| # Version 2.5.0
+| # Version 2.6.0
 
 | CACHE:
 | /partials/index
@@ -16,6 +16,8 @@
 | /js/angular.min.js.map
 | /js/angular-route.min.js
 | /js/angular-route.min.js.map
+| /js/angular-animate.min.js
+| /js/angular-animate.min.js.map
 | /js/app.js
 | /js/controllers/controllers.js
 | /js/directives/ui-bootstrap-tpls-0.11.0.min.js
