--- a/views/scripts.jade
+++ b/views/scripts.jade
@@ -1,5 +1,6 @@
 script(src='/js/angular.min.js')
 script(src='/js/angular-route.min.js')
+script(src='/js/angular-animate.min.js')
 script(src='/js/app.js')
 
 script(src='/js/controllers/controllers.js')
